[AutoMsgID Codec:"binary"]
struct VerifyREQ {
	Token string
}


[AutoMsgID Codec:"binary"]
struct VerifyACK {
	Status int32
}
